--- a/src/app/view/edit-profile/edit-profile.component.html
+++ b/src/app/view/edit-profile/edit-profile.component.html
@@ -23,44 +23,44 @@
                     <div class="form_row clearfix">
                         <label>Profile Photo<span class="indicates">*</span></label>
                         <div class="col-sm-10 -m-rl-15">
-                            <input type="file" name="image" value="" class="form-control textfield" ngModel> 
+                            <!-- <input type="file" name="image" value="" class="form-control textfield" ngModel>  -->
+                            <input type="file" image-upload
+                            (imageSelected)="selected($event)"
+                            [resizeOptions]="resizeOptions">
                         </div>
                     </div>
                     <div class="form_row clearfix">
                         <label>First Name <span class="indicates">*</span></label>
                         <input type="text" name="first_name" id="" [(ngModel)]="userInfoArr.first_name" class="form-control textfield" >
-                        <span id="user_loginInfo">{{firstname}}</span>  
+                        <span id="errfield">{{firstname}}</span>  
                     </div>
                     <div class="form_row clearfix">
                         <label>Last Name <span class="indicates">*</span></label>
                         <input type="text" name="last_name" id="" [(ngModel)]="userInfoArr.last_name" class="form-control textfield" >
-                        <span id="user_loginInfo">{{lastname}}</span>  
+                        <span id="errfield">{{lastname}}</span>  
                     </div>
                     <div class="form_row clearfix">
                         <label>Address <span class="indicates">*</span></label>
                         <textarea class="textfield" name="address" [(ngModel)]="userInfoArr.address" style="height: 100px"></textarea>
-                        <span id="user_loginInfo">{{address}}</span>  
+                        <span id="errfield">{{address}}</span>  
                     </div>
                     <div class="form_row clearfix">
                         <label>Birth date<span class="indicates">*</span></label>
-                        <!-- <input type="text" name="dob" id="birth-date" [(ngModel)]="userInfoArr.dob" class="form-control textfield" > -->
-                        <!-- <datepicker-ionic singleSelect ([ngModel])="date"></datepicker-ionic>  -->
-                        <!-- <datepicker [(ngModel)]="dateValue"></datepicker> -->
                         <my-date-picker [options]="myDatePickerOptions" (dateChanged)="onDateChanged($event)" [selDate]="selectedDateNormal"></my-date-picker>
-                        <span id="user_loginInfo">{{dob}}</span> 
+                        <span id="errfield">{{dob}}</span> 
                         <input type="hidden" name="dob" [(ngModel)]="selectedDateNormal">
                     </div>
                     <div class="form_row clearfix">
                         <label>Birth place<span class="indicates">*</span></label>
                         <input type="text" name="birth_place" id="" [(ngModel)]="userInfoArr.birth_place" class="textfield">
-                        <span id="user_loginInfo">{{birthplace}}</span>  
+                        <span id="errfield">{{birthplace}}</span>  
                     </div>
                     <div class="form_row clearfix">
                         <label>Gender <span class="indicates">*</span></label>
                         <div class="col-sm-12">
-                            <label class=""><input type="radio" name="gender" value="male" [checked]="'male'===userInfoArr.gender" [(ngModel)]="gender" />Male </label>
-                            <label><input type="radio" value="female" name="gender" [(ngModel)]="gender" [checked]="'female'===userInfoArr.gender" />Female </label>
-                            <span id="user_loginInfo">{{gender}}</span> 
+                            <label class=""><input type="radio" value="male" name="gender" [(ngModel)]="userInfoArr.gender"  [checked]="'male'==userInfoArr.gender">Male </label>
+                            <label><input type="radio" value="female" [(ngModel)]="userInfoArr.gender" name="gender" [(ngModel)]="gender" [checked]="'female'==userInfoArr.gender" />Female </label>
+                            <span id="errfield">{{gendererr}}</span> 
                         </div>
                     </div>
                     <div class="form_row clearfix">
@@ -68,7 +68,7 @@
                         <select class="form-control" name="country" [(ngModel)]="userInfoArr.country" >
                             <option *ngFor="let country of countryList" value="{{country.id}}" (click)="getState(country.id)" >{{country.name}}</option>
                         </select>
-                        <span id="user_loginInfo">{{country}}</span> 
+                        <span id="errfield">{{country}}</span> 
                     </div>
 
                     <div class="form_row clearfix">
@@ -76,51 +76,40 @@
                         <select class="form-control" name="state" [(ngModel)]="userInfoArr.state" >
                             <option *ngFor="let state of stateList" value="{{state.state_id}}" (click)="getCIty(state.state_id)" >{{state.name}}</option>
                         </select>
-                        <span id="user_loginInfo">{{state}}</span> 
+                        <span id="errfield">{{state}}</span> 
                     </div>
                     <div class="form_row clearfix">
                         <label>City<span class="indicates">*</span></label>
                         <select class="form-control" name="city" [(ngModel)]="userInfoArr.city" >
                             <option *ngFor="let city of cityList" value="{{city.city_id}}">{{city.name}}</option>
                         </select>
-                        <span id="user_loginInfo">{{city}}</span> 
+                        <span id="errfield">{{city}}</span> 
                     </div>
-                    <!-- <input type="text" name="city_name" id="" class="form-control textfield" >  -->
                     <div class="form_row clearfix">
-                    <label>Zip Code<span class="indicates">*</span></label>
-                    <input type="text" name="zip_code" id="" [(ngModel)]="userInfoArr.zip_code" class="form-control textfield" >
-                    <span id="user_loginInfo">{{zipcode}}</span>  
-                </div>
-                <div class="form_row clearfix">
-                    <label>Email<span class="indicates">*</span></label>
-                    <input type="email" name="email" [(ngModel)]="userInfoArr.email" class="form-control textfield" >
-                    <span id="user_loginInfo">{{email}}</span> 
-                </div>
-                <div class="form_row clearfix">
-                    <label>Contact</label>
-                    <input type="tel" name="phone" [(ngModel)]="userInfoArr.phone" class="form-control textfield" >
-                    <span id="user_loginInfo">{{contact}}</span>  
-                </div>
-                <div class="form_row clearfix">
-                    <label>Interest Topic</label>
-                    <div class="col-sm-12 -m-rl-15">
-                            <!-- <select id="multiple" class="textfield select2-multiple" [(ngModel)]="userInfoArr.favorite_category" multiple name="favorite_category[]"> 
-                                <optgroup label="Tech"  *ngFor="let topic of userInfoArr.favorite_category">
-                                    <option>Cisco</option>
-                                    <option>Database</option>
-                                    <option>Microsoft's</option>
-                                    <option>Networking</option>
-                                    <option>Open Source</option>
-                                    <option>IT</option>
-                                </optgroup>
-                            </select> -->
-                            <ng-select (data)="userInfoArr.favorite_category"
+                        <label>Zip Code<span class="indicates">*</span></label>
+                        <input type="text" name="zip_code" id="" [(ngModel)]="userInfoArr.zip_code" class="form-control textfield" >
+                        <span id="errfield">{{zipcode}}</span>  
+                    </div>
+                    <div class="form_row clearfix">
+                        <label>Email<span class="indicates">*</span></label>
+                        <input type="email" name="email" [(ngModel)]="userInfoArr.email" class="form-control textfield" >
+                        <span id="errfield">{{email}}</span> 
+                    </div>
+                    <div class="form_row clearfix">
+                        <label>Contact</label>
+                        <input type="tel" name="phone" [(ngModel)]="userInfoArr.phone" class="form-control textfield" >
+                        <span id="errfield">{{contact}}</span>  
+                    </div>
+                    <div class="form_row clearfix">
+                        <label>Interest Topic</label>
+                        <div class="col-sm-12 -m-rl-15">
+                            <ng-select (data)="value"
                             [multiple]="true"
                             [active] = "userInfoArr.favorite_category"
-                            [items]="userInfoArr.favorite_category"
-                            (selected)="favorite_category">
+                            [items]="topicArr"
+                            (data)="refreshValue($event)"
+                            (selected)="value">
                         </ng-select>
-                        <input type="hidden" name="favorite_category" [(ngModel)]="userInfoArr.favorite_category">
                     </div>
                 </div>
                 <div class="form_row clearfix">
@@ -133,6 +122,7 @@
                 </div>
             </div>
         </form>
+        <simple-notifications [options]="options" (onCreate)="created($event)" (onDestroy)="destroyed($event)"></simple-notifications>
     </div>
 </div>
 <!-- .wrap -->
