--- a/src/app/view/edit-profile/edit-profile.component.html
+++ b/src/app/view/edit-profile/edit-profile.component.html
@@ -114,9 +114,9 @@
                 </div>
                 <div class="form_row clearfix">
                     <label>About Me</label>
-                   <!--  <ckeditor [(ngModel)]="userInfoArr.about_me" debounce="500">
+                   <!--  <ckeditor [(ngModel)]="userInfoArr.about_me" debounce="500" [config]="{uiColor: '#99000'}">
                   </ckeditor> -->
-                  <!-- <textarea class="ckeditor form-control" name="about_me" rows="6" [(ngModel)]="userInfoArr.about_me"></textarea> -->
+                  <textarea class="ckeditor form-control" name="about_me" rows="6" [(ngModel)]="userInfoArr.about_me"></textarea>
               </div>
               <div class="form_row ">
                 <button class="btn btn-info" type="submit">Update</button>
