--- a/src/app/view/organization-edit/organization-edit.component.html
+++ b/src/app/view/organization-edit/organization-edit.component.html
@@ -22,7 +22,9 @@
                     <div class="form_row clearfix">
                         <label>Business Logo</label>
                         <div class="col-sm-10 -m-rl-15">
-                            <input type="file" name="image" value="" ngModel class="form-control textfield"> 
+                            <input type="file" image-upload
+                            (imageSelected)="selected($event)"
+                            [resizeOptions]="resizeOptions">
                         </div>
                        
                     </div>
